# ouroboros-network

./: .gitattributes  .gitignore  .gitmodules  .hlint.yaml  .stack-to-nix.cache  .stylish-haskell-network.yaml  .stylish-haskell.yaml  .travis.yml  AGENTS.md  BRANCH.md  Block.hs  CODE-OF-CONDUCT.md  CODEOWNERS  CONTRIBUTING.md  Chain.hs  ChangeLog.md  Consensus-CHANGELOG.md  ConsumerProtocol.hs  DeadCardanoAVVM.hs  Dockerfile  NOTICE  README.md  README.rst  SECURITY.md  Sim.hs  SimSTM.hs  TODO  bors.toml  cabal.project  cabal.project.local  cabal.project.local.ci  cabal.project.local.ci.windows  conf.py  default.nix  flake.nix  fourmolu.yaml  index.rst  iohk-nix.json  jir.org  lib.nix  (+16 more)
DQ/: dq.cabal  stack.yaml
DQ/src/: Example.hs  PreDQAlgebra.hs
Win32-network/: ChangeLog.md  NOTICE  README.md  Win32-network.cabal
Win32-network/cbits/: Win32Async.c  Win32Socket.c
Win32-network/demo/: named-pipe-demo.hs
Win32-network/include/: Win32-network.h
Win32-network/test/: Main.hs
acts-generic/: CHANGELOG.md  NOTICE  acts-generic.cabal
acts-generic/changelog.d/: scriv.ini
anti-diff/: anti-diff.cabal  check-stylish.sh  format-stylish.sh
anti-diff/bench/: Main.hs
anti-diff/test/: Main.hs
byron-proxy/: ChangeLog.md  README.md  byron-proxy.cabal  cabal.project
byron-proxy/cfg/: logging-validator.yaml  logging.yaml
cabal-lint/: README.md  cabal-lint.cabal
cabal-lint/exe-src/: Main.hs
cardano-api/: cardano-api.cabal
cardano-client/: CHANGELOG.md  NOTICE  cardano-client.cabal
cardano-client/changelog.d/: 20250929_102532_coot_packages.md  scriv.ini
cardano-client/test/: Main.hs
cardano-diffusion/: CHANGELOG.md  NOTICE  cardano-diffusion.cabal
cardano-diffusion/changelog.d/: 20250922_173749_coot_packages.md  20250929_093633_alexander.esgen_peras_diffusion.md  20251001_123658_coot_cardano_ping.md  20251001_160442_coot_cardano_ping.md  20251007_150408_coot_net_sim_tracer.md  20251013_152200_crocodile-dentist_test_false_positive.md  20251016_142053_coot_dmq_signature_validation.md  20251021_214416_pablo.lamela_prepare_for_wasm.md  20251024_151019_coot_peer_selection_false_positive_test_failure.md  20251028_162450_crocodile-dentist_ledgerpeersnapshot_hash.md  20251108_103013_edgr_behind_firewall.md  20251128_175447_coot_peer_selection_test_failure.md  20251208_170159_crocodile-dentist.md  20251211_130157_edgr_chainsync_timeouts.md  20260106_05000_erikd_dependencies.md  20260112_114426_karl.fb.knutsson_max_recon_main.md  20260119_122936_coot_dmq_related_changes.md  20260120_113456_coot_dmq_related_changes.md  20260127_140400_georgy.lukyanov_10_7_integration.md  20260127_175109_coot_leios_network_mux_demo.md  20260205_164419_edgr_churn_test.md  20260209_103441_coot_nr.md  20260213_104200_erikd_ghc_updates.md  20260216_123142_crocodile-dentist_fix_tx_submission.md  20260224_141545_georgy.lukyanov_ledger_peer_snapshot_raw_block_hash.md  20260302_082729_crocodile-dentist_tracing_tx_submission.md  20260302_082940_crocodile-dentist_tracing_tx_submission.md  20260302_083253_crocodile-dentist_tracing_tx_submission.md  20260302_084442_crocodile-dentist_tracing_tx_submission.md  20260302_134314_crocodile-dentist_tracing_tx_submission.md  20260310_083959_coot_testing.md  20260312_130921_coot_topology.md  20260325_120134_coot_local_root_peers.md  20260330_134910_crocodile-dentist_mux_single_peer_performance.md  20260401_183336_coot_haddocks_update.md  20260421_112246_coot_churnmode.md  20260424_094857_karl.fb.knutsson_tx_tests.md  20260430_150857_crocodile-dentist.md  20260504_105437_geo2a_consensus_issue_1852.md  20260505_072906_crocodile-dentist_fix_targets_sync.md  (+15 more)
cardano-diffusion/demo/: chain-sync.hs  ping.hs
cardano-ping/: CHANGELOG.md  NOTICE  cardano-ping.cabal
cardano-ping/changelog.d/: 20250929_093633_alexander.esgen_peras_diffusion.md  20251028_162800_crocodile-dentist_ledgerpeersnapshot_hash.md  20260115_114230_coot_ouroboros_network_0_24.md  20260306_172000_jdm_valid_empty_json.md  scriv.ini
decentralized-message-queue/: CHANGELOG.md  NOTICE  config.json  decentralized-message-queue.cabal  topology.json
decentralized-message-queue/app/: Main.hs
decentralized-message-queue/test/: Main.hs
dmq-node/: CHANGELOG.md  README.md  config.json  dmq-node.cabal  peer-snapshot.json  topology.json
dmq-node/app/: Main.hs
dmq-node/cddl/: Main.hs
dmq-node/changelog.d/: 20250929_102712_coot_packages.md  20250929_104821_coot_dmq_ntc_socket.md  20251016_142205_coot_dmq_signature_validation.md  20251030_162643_crocodile-dentist_ledgerpeersnapshot_hash.md  20251118_165634_coot_dmq_node_removed_evolution_config.md  scriv.ini
dmq-node/test/: Main.hs
fs-api/: CHANGELOG.md  NOTICE  README.md  fs-api.cabal
fs-sim/: CHANGELOG.md  README.md  fs-sim.cabal
fs-sim/test/: Main.hs
incremental-benchmark/: 183867428_53d0a6c09e4ce48c221f24a31e64eb3331c7952d886be8e950f7194012fea009_raw.cbor  README.md  incremental-benchmark.cabal  parse.hs  run.sh
incremental-benchmark/src/: Main.hs
io-classes/: CHANGELOG.md  README.md  io-classes.cabal
io-classes/test/: Main.hs
io-sim/: CHANGELOG.md  NOTICE  README.md  default.nix  how-to-use-IOSimPOR.md  how-to-use-IOSimPOR.txt  io-sim.cabal
io-sim-classes/: CHANGELOG.md  README.md  default.nix  io-sim-classes.cabal
io-sim-classes/test/: Main.hs
io-sim/bench/: Main.hs
io-sim/test/: Main.hs
kes-agent/: CHANGELOG.md  kes-agent.cabal  protocol.html
kes-agent-crypto/: CHANGELOG.md  kes-agent-crypto.cabal
kes-agent/cli/: AgentMain.hs  (+2 more)
ledger-ondisk/: CHANGELOG.md  ledger-ondisk.cabal
monoidal-synchronisation/: CHANGELOG.md  monoidal-synchronisation.cabal
network-mux/: CHANGELOG.md  README.md  network-mux.cabal
ntp/: ntp.cabal
ntp-client/: CHANGELOG.md  NOTICE  README.md  ntp-client.cabal
old-time-1.1.0.3/: aclocal.m4  changelog.md  configure  configure.ac  old-time.buildinfo  old-time.cabal
ouroboros-chain/: ouroboros-chain.cabal
ouroboros-consensus-byron/: CHANGELOG.md  README.md  ouroboros-consensus-byron.cabal
ouroboros-consensus-byron-test/: CHANGELOG.md  README.md  ouroboros-consensus-byron-test.cabal
(+4854 files in other folders)
