name:                ouroboros-network
version:             0.1.0.0
synopsis:            A networking layer for the Ouroboros blockchain protocol
-- description:
license-file:        LICENSE
author:              Alexander Vieth, Marcin Szamotulski, Duncan Coutts
maintainer:
copyright:           2018 IOHK
category:            Network
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/input-output-hk/ouroboros-network

library
  hs-source-dirs:      src
  -- At this experiment/prototype stage everything is exposed.
  -- This has to be tidied up once the design becomes clear.
  exposed-modules:     Block
                       Chain
                       ChainProducerState
                       ConsumersAndProducers
                       MonadClass
                       MonadClass.MonadConc
                       MonadClass.MonadFork
                       MonadClass.MonadProbe
                       MonadClass.MonadSay
                       MonadClass.MonadSendRecv
                       MonadClass.MonadSTM
                       MonadClass.MonadSTMTimer
                       MonadClass.MonadTimer
                       Node
                       Ouroboros
                       Pipe
                       Protocol
                       ProtocolInterfaces
                       Serialise
                       Sim
                       Util.Singletons
  other-modules:
-- Old experiments, not currently building:
--                     Types
--                     ChainSelection
--                     ConsumerProtocolSTM
--                     Chain.Volatile,
  default-language:    Haskell2010
  other-extensions:    BangPatterns,
                       DataKinds,
                       EmptyCase,
                       ExistentialQuantification,
                       FlexibleContexts,
                       FlexibleInstances,
                       FunctionalDependencies,
                       GADTs,
                       GADTSyntax,
                       GeneralizedNewtypeDeriving,
                       MultiParamTypeClasses,
                       NamedFieldPuns,
                       OverloadedStrings,
                       PolyKinds,
                       RankNTypes,
                       RecordWildCards,
                       ScopedTypeVariables,
                       TemplateHaskell,
                       TupleSections,
                       TypeApplications,
                       TypeFamilies,
                       TypeInType
  build-depends:       base         >=4.9 && <4.12,
                       array,
                       bytestring   >=0.10 && <0.11,
                       cborg        >=0.2.1 && <0.3,
                       clock        >=0.7 && <0.8,
                       containers   >=0.5 && <0.6,
                       fingertree   >=0.1 && <0.2,
                       free         >=5.1 && <5.2,
                       hashable     >=1.2 && <1.3,
                       mtl,
                       process,
                       random       >=1.1 && <1.2,
                       semigroups   >=0.18 && <0.19,
                       stm          >=2.4 && <2.5,
                       text         >=1.2 && <1.3,
                       transformers >=0.5 && <0.6,
                       void         >=0.7 && <0.8,

                       QuickCheck   >=2.12 && <2.13

  ghc-options:         -Wall

test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:       Test.Chain
                       Test.ChainProducerState
                       Test.DepFn
                       Test.Node
                       Test.Ouroboros
                       Test.Pipe
                       Test.Sim
  default-language:    Haskell2010
  default-extensions:  NamedFieldPuns
  build-depends:       base,
                       ouroboros-network,

                       array,
                       bytestring,
                       cborg,
                       clock,
                       containers,
                       fingertree,
                       free,
                       hashable,
                       mtl,
                       process,
                       QuickCheck,
                       random,
                       semigroups,
                       stm,
                       tasty,
                       tasty-quickcheck,
                       text,
                       transformers,
                       void
  ghc-options:         -Wall
