name:           dq
version:        1.0.0.0
description:    Delta Q Simulations
author:         Lars Bruenjes
maintainer:     lars.bruenjes@iohk.io
copyright:      Copyright Input Output HK 2019
build-type:     Simple
cabal-version:  >= 1.10

library
  exposed-modules:
      Example
      PreDQAlgebra
      PreDQAlgebra.Class
      PreDQAlgebra.Discrete
      PreDQAlgebra.NoVariance
      Process.Core
      Process.Graph
      Process.Simulation
      Utils.Priority
  hs-source-dirs:
      src
  ghc-options: -Wall
  build-depends:
      base >=4.7 && <5
    , containers
    , free
    , lens
    , MonadRandom
    , mtl
  default-language: Haskell2010
