cabal-version: 2.4

name:                   Win32-network
version:                0.1.0.0
synopsis:               Win32 network API
license:                Apache-2.0
license-files:          LICENSE
                        NOTICE
author:                 Duncan Coutts, Marcin Szamotulski
maintainer:             duncan@well-typed.com, marcin.szamotulski@iohk.io
copyright:              2019-2021 Input Output (Hong Kong) Ltd.
category:               System
build-type:             Simple
extra-source-files:     include/Win32-network.h

flag demo
  description: Build the named pipe demos
  default:     False

common base
  build-depends:        base >= 4.12 && < 4.15

common project-config
  default-language:     Haskell2010

  ghc-options:          -Werror

library
  import:               base, project-config

  hs-source-dirs:      src
  if os(windows)
    exposed-modules:   System.IOManager
                       System.Win32.NamedPipes
                       System.Win32.Async
                       System.Win32.Async.File
                       System.Win32.Async.ErrCode
                       System.Win32.Async.Socket
                       System.Win32.Async.Socket.ByteString
                       System.Win32.Async.Socket.ByteString.Lazy
                       System.Win32.Async.Internal
    other-modules:     System.Win32.Async.IOData
                       System.Win32.Async.IOManager
                       System.Win32.Async.Overlapped
                       System.Win32.Async.Socket.Syscalls
                       System.Win32.Async.WSABuf
    include-dirs:      include
    build-depends:     bytestring        >= 0.10 && < 0.11,
                       network           >= 3.1.2  && < 3.2,
                       Win32             >= 2.5.4.1
    extra-libraries:   ws2_32

  else

    exposed-modules:   System.IOManager

  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wpartial-fields
                       -Widentities
                       -Wredundant-constraints

executable named-pipe-demo
  import:               base, project-config

  hs-source-dirs:       demo
  main-is:              named-pipe-demo.hs
  if os(windows)
    build-depends:      bytestring
                      , Win32
                      , Win32-network

  if os(windows) && impl(ghc < 8.10)
    build-depends:      binary

  ghc-options:          -Wall

  ghc-options:          -threaded

test-suite test
  import:               base, project-config

  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  if os(windows)
    buildable: True
  else
    buildable: False
  if os(windows)
    other-modules:       Test.Generators
                         Test.Async.PingPong
                         Test.Async.Handle
                         Test.Async.Socket
    build-depends:       async,
                         binary,
                         bytestring,
                         network,
                         stm,
                         tasty,
                         tasty-hunit,
                         tasty-quickcheck,
                         QuickCheck        >= 2.13.1,
                         quickcheck-instances,
                         Win32,
                         Win32-network

  ghc-options:          -Wall

  ghc-options:          -threaded
