cabal-version: 3.4
name: acts-generic
version: 0.1.0.1
synopsis: Generic instances for `Act` type class.
license: Apache-2.0
license-files:
  LICENSE
  NOTICE

author: Marcin Szamotulski
maintainer: coot@coot.me
copyright: 2025-2026 Intersect
category: Data
build-type: Simple
extra-doc-files: CHANGELOG.md

common ghc-options
  ghc-options:
    -Wall
    -Wno-unticked-promoted-constructors
    -Wcompat
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wpartial-fields
    -Widentities
    -Wunused-packages

  -- ghc-9.14 gives redundant constraint warnings on some constraints
  -- that are needed for earlier compilers.
  if impl(ghc <9.14)
    ghc-options:
      -Wredundant-constraints

library
  import: ghc-options
  exposed-modules: Data.Act.Generic
  -- other-modules:
  -- other-extensions:
  build-depends:
    acts,
    base >=4.14 && <4.23,

  hs-source-dirs: src
  default-language: Haskell2010
  default-extensions: ImportQualifiedPost
